@@ -101,6 +101,7 @@
 "Personal" = "Personal";
 "To Do" = "To Do";
 "Later" = "Later";
+"Return Receipt Sent" = "Return Receipt Sent";
 "a2_Sunday" = "Su";
 "a2_Monday" = "Mo";
 "a2_Tuesday" = "Tu";
